# my2a

./: .env-example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose-prod.yaml  docker-compose.yaml  docker-compose.yml  package-lock.json
back/: Dockerfile  db.sqlite3  entrypoint-dev.sh  entrypoint-prod.sh  gunicorn.conf.py  manage.py  pyproject.toml
back/api/: serializers.py  test.py  urls.py  utils.py  views.py
back/education/: admin.py  exportpdf.py  forms.py  mail.py  models.py  serializers.py  settings.py  utils.py  views.py
back/education/migrations/: 0002_course_rename_departement_student_department.py  0003_rename_ects_course__ects.py  0004_department_remove_course_parcours_student_user_and_more.py  0005_alter_course_code_alter_course_teacher.py  0006_alter_course_semester_enrollment.py  0007_alter_enrollment_course_alter_enrollment_student.py  0008_alter_student_parcours.py  0009_alter_course_department.py  0010_student_editable.py  0011_remove_course__ects_course_ects.py  0012_student_comment.py  0013_parameter.py  0014_parameter_show_alter_course_name.py  0015_department_description_alter_parameter_value.py  0016_parcours_elective_text_parcours_mandatory_text.py  0017_parcours_academic_base_ects_parcours_base_ects.py  0018_department_timetable_intro.py  0019_alter_department_timetable_intro.py  0020_department_end_comment.py
back/education/templates/registration/: login.html
back/my2a/: asgi.py  celery.py  mail.py  settings.py  urls.py  wsgi.py
back/student/: models.py
back/student/migrations/: 0001_initial.py
db/: OPTIM.csv  (+1 more)
(+33 files in other folders)
