[tool.poetry]
name = "My2A"
version = "0.1"
description = ""
authors = ["Alexandre Ducorroy"]

[tool.poetry.dependencies]
django = "4.2.6"
django-cas-ng = "5.0.0"
django-cors-headers = "^4.2.0"
django-environ = "0.11.2"
djangorestframework = "^3.13.1"
gunicorn = "21.2.0"
numpy = "^1.26.0"
opencv-python = "^4.8.0"
psycopg2 = "2.9.9"
python = "3.11.6"

[tool.poetry.dev-dependencies]